--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "node server",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
+  },
+  "engines": {
+    "node": "12.15.0",
+    "npm": "6.13.4"
   },
   "private": true,
   "dependencies": {
@@ -23,8 +27,11 @@
     "@angular/router": "~8.2.13",
     "angular-popper": "^2.0.1",
     "bootstrap": "^4.6.0",
+    "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
+    "ngx-bootstrap": "^5.6.2",
+    "ngx-mask": "^8.2.0",
     "ngx-toastr": "^11.3.3",
     "popper.js": "^1.16.1",
     "rxjs": "~6.4.0",
